[metadata]
name = db_connector
version = 1.0.0
author = Numan Farukh
author_email = numanfarukh.work@gmail.com
description = The db_connector is a python package to connect with different database backends and perform CRUD and other filltering operations.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/famcodings/db_connector
project_urls =
    Bug Tracker = https://github.com/famcodings/db_connector/-/issues
    repository = https://github.com/famcodings/db_connector
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    mysqlclient

[options.packages.find]
where = src